tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__SeeAlltheThings-AAAAAAAAAAAAAAAAAAABmA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 408,
  "prerequisites": [
    407
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It's quite difficult to see how much blood there is in your altar, or your personal blood network. This little device will solve that problem for you. Just a little prick in the finger, and everything will be revealed.\n\nYou can also make the sigil of sight when you have the alchemy set too.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "See All the Things",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    407
  ],
  "rewards": [],
  "tasks": []
}
