tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__StarterKey-AAAAAAAAAAAAAAAAAAAJmQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2457,
  "prerequisites": [
    926
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You need this to start Rituals. More complex rituals need the Activated version. To use it, bind it to yourself and right-click on the center of the ritual.\n\n[note]The Energy Crystal needs to be fully charged.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Starter Key",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    926
  ],
  "rewards": [],
  "tasks": []
}
