tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__Tier1Slates-AAAAAAAAAAAAAAAAAAABlw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 407,
  "prerequisites": [
    177
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The basic slates. Basically just stone with blood infused in it.\n\nYou can either pump the blood out, use buckets, or fill cells to get the blood for the cutting machine.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tier 1 Slates",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    177
  ],
  "rewards": [],
  "tasks": []
}
